--- a/src/main/webapp/admin/css/admin_view.css
+++ b/src/main/webapp/admin/css/admin_view.css
@@ -1,4 +1,5 @@
 
+/*공통*/
 section{
 	min-width:600px;
 	width:100%;
@@ -23,23 +24,34 @@ table{
     border: 1px solid #d6dce7;
     text-align: center;
 }
+table tr:nth-child(1){
+	border-top:1px solid black;
+}
+ table tr:nth-last-child(1){
+ 	border-bottom:1px solid black;
+ }
 
 table tr th{
 	background: #6f809a;
     color: #fff;
     border: 1px solid #60718b;
-    font-weight: normal;
+    font-weight: nomal;
     padding: 8px 5px;
-    font-size: 0.92em;
+    font-size: 15px;
     height: 35px;
 }
 
 table tr td{
-	height: 35px;
+	height: 35px; text-align:left; padding-left:10px; font-size:15px;
 }
 
 table tr:nth-of-type(2n){
 	background: #eff3f9;
+}
+table textarea{
+	border:none; width:98%; background-color:inherit;
+	margin-top:10px; margin-bottom:10px;
+	resize:none; font-size:15px;
 }
 
 .table_left{
@@ -63,15 +75,17 @@ table tr:nth-of-type(2n){
     text-decoration: none;
     line-height: 2.4em;
     vertical-align: middle;
+    cursor:pointer;
 }
 
+
+/*1:1 문의*/
 #user_info_area, #user_content_area, #answer_info_area{
 	width:1000px;
 	min-width : 800px;	
 	margin-bottom:100px;
 	margin-left:20px;
 }
-
 #user_info_area h1, #user_content_area h1, #answer_info_area h1{
 	margin-bottom:10px;
 }
@@ -82,6 +96,18 @@ table tr:nth-of-type(2n){
 
 #user_content_area{
 	
+}
+.content_table{
+	width:100%;
+}
+.content_img{
+	width:100%; padding:0;
+}
+.content_img img{
+	width:100%;
+}
+#user_content_area pre{
+	width:100%; margin-top:10px; margin-bottom:50px;
 }
 
 #answer_info_area{
