관리자 공지사항 css, 기능 수정 완료

--- a/src/main/webapp/admin/css/admin_view.css
+++ b/src/main/webapp/admin/css/admin_view.css
@@ -113,9 +113,16 @@ table textarea{
 #answer_info_area{
 	
 }
-
-
-
+/*공지사항*/
+.notice_title{
+	padding-bottom:5px;
+}
+#notice_content{
+	width:1000px; margin-top:5px;
+}
+.notice_th{
+	width:10%; 
+}
 
 
 
