--- a/src/main/webapp/admin/css/admin_view.css
+++ b/src/main/webapp/admin/css/admin_view.css
@@ -1,5 +1,8 @@
 
 /*공통*/
+a, a:active, a:link, a:visited, a:hover{
+	color:inherit;
+}
 section{
 	min-width:600px;
 	width:100%;
@@ -39,6 +42,7 @@ table tr th{
     padding: 8px 5px;
     font-size: 15px;
     height: 35px;
+    text-align:left;
 }
 
 table tr td{
