--- a/src/main/webapp/user/css/content.css
+++ b/src/main/webapp/user/css/content.css
@@ -384,6 +384,11 @@
 .amount .info li span{display:block; line-height:34px; color:#666;}
 .amount .info li span.title{float:left; padding:0 0 0 10px;}
 .amount .info li span.won{float:right; padding:0 10px 0 0;}
+.amount .total_info{position:absolute; right:21px; top:20px; width:302px;}
+.amount .total_info li{height:34px; font-family:'Dotum'; border-bottom:1px #d9d9d9 dashed;}
+.amount .total_info li span{display:block; line-height:34px; color:#666;}
+.amount .total_info li span.title{float:left; padding:0 0 0 10px;}
+.amount .total_info li span.won{float:right; padding:0 10px 0 0;}
 .amount .total{float:right; margin:0 30px 0 0; padding:0 0 30px 0;}
 .amount .total li{float:left; padding:0 0 0 20px; color:#666; font-family:'Dotum';}
 .amount .total li.mileage{color:#888; font-family:'Dotum'; padding:8px 0 0 20px;}
