--- a/src/main/webapp/user/css/layout.css
+++ b/src/main/webapp/user/css/layout.css
@@ -77,15 +77,15 @@ html{overflow-y:scroll; width:100%;}
 #newGoods{width:100%; margin:0 0 40px 0; overflow:hidden;}
 #newGoods h3{font-size:24px; font-weight:600; color:#3d3d3d; line-height:1.2; margin:35px 0;}
 #newGoods .newcoffee{position:relative; float:left; width:409px; height:435px; margin:0 0 0 40px; border-right:1px #e5e5e5 solid;}
-#newGoods .newcoffee .abimg{position:absolute; left:20px; top:153px;}
+#newGoods .newcoffee .abimg{position:absolute; left:80px; top:170px;}
 #newGoods ul li.name{font-size:16px; line-height:1.2; font-weight:600; color:#7d4f00; padding:0 0 6px 0;}
-#newGoods ul li.txt{width:332px; color:#666; line-height:1.2;}
+#newGoods ul li.txt{width:332px; color:#666; line-height:1.2; word-break:keep-all;}
 #newGoods ul li.price{font-size:22px; font-weight:600; color:#f15e23; padding:6px 0 0 0;}
 #newGoods .mdchoice{ float:left; width:370px; margin:0 0 0 40px;}
 #newGoods .mdchoice ul li.name{width:144px;}
-#newGoods .mdchoice ul li.txt{width:186px; color:#666; line-height:1.2;}
+#newGoods .mdchoice ul li.txt{width:186px; color:#666; line-height:1.2; word-break:keep-all;}
 #newGoods .mdchoice .one{position:relative; width:100%; padding:0 0 35px 0; border-bottom:1px #e5e5e5 solid;}
-#newGoods .mdchoice .one .img{position:absolute; right:0; top:70px;}
+#newGoods .mdchoice .one .img{position:absolute; right:0; top:30px;}
 #newGoods .mdchoice .two{position:relative; width:100%; padding:35px 0 0 0;}
 #newGoods .mdchoice .two .img{position:absolute; right:0; top:34px;}
 
@@ -157,7 +157,8 @@ transition-property:transform, left, top; transition-duration:0s; transform:tran
 #bestseller{width:100%; height:282px; margin:0 0 30px 0; z-index:999; overflow:hidden;}
 #bestseller .swiper-slide{position:relative; width:300px; height:282px; overflow:hidden;}
 #bestseller .swiper-slide .img{width:243px; height:226px; margin:0 0 0 28px;}
-#bestseller .swiper-slide .name{width:150px; text-align:center; line-height:1.2; color:#666; margin:0 auto;}
+#bestseller .swiper-slide .img img{width:243px; height:226px;}
+#bestseller .swiper-slide .name{width:150px; text-align:center; line-height:1.2; color:#666; margin:0 auto; word-break: keep-all;}
 #bestseller .swiper-slide .price{width:150px; text-align:center; font-size:22px; color:#f15e23; font-weight:600; margin:4px auto 0;}
 
 #mainSale{width:100%; height:210px; margin:0 0 30px 0; z-index:999; overflow:hidden;}
